# rune

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
data/shaders/: colors.glsl  defs.glsl  test.frag  test.vert  triangle.frag  triangle.vert
src/: config.cpp  config.h  constants.h  consts.h  core.cpp  core.h  graphics_backend.cpp  graphics_backend.h  logger.h  main.cpp  platform.cpp  platform.h  renderer.cpp  renderer.h  types.h  utils.h
src/gfx/: buffer.h  camera.h  graphics_backend.cpp  graphics_backend.h  graphics_pass.cpp  graphics_pass.h  render_pass.cpp  render_pass.h  texture.h  vertex.h
src/math/: constants.h  matrix.h  vector.h
